# FeELib-for-Houdini

./: .gitignore  MainMenuCommon.xml  OPmenu.xml  PARMmenu.xml  cpp - 快捷方式.lnk
cpp/: CMakeCommand.txt  CMakeLists.txt  openCmake.bat  openDSO19.0.bat  openDSO19.5.bat  openDSO20.0.bat  openDSO20.5.bat  openDocDSO19.0.bat  openDocDSO19.5.bat  openGU.bat  openHDK_FeELib.bat  openHDK_FeELib18.5.bat  openHDK_FeELib19.0.bat  openHDK_FeELib19.5.bat  openHDK_FeELib20.0.bat  openInclude.bat  openInclude19.0.bat  openSample.bat
cpp/CMakeLists18.5/: CMakeLists.txt
cpp/CMakeLists19.0/: CMakeLists.txt
cpp/CMakeLists19.5/: CMakeLists.txt
cpp/hip/: DM_LightBloomHook.hip  FeE Attribute Blend.hip  FeE Attribute Cast.hip  FeE Attribute Copy.hip  FeE Attribute Duplicate.hip  FeE Attribute Fill.hip  FeE Attribute Interpolate Ray.hip  FeE Attribute Promote.hip  FeE Attribute Scale.hip  FeE Attribute Value Replace.hip  FeE Block Stop Condition.hip  FeE Carve.hip  FeE Clip.hip  FeE Complete Graph.hip  FeE Convert Line.hip  FeE Convert Line2.hip  FeE Corner Point.hip  FeE Curve Expand 2D.hip  FeE Curve Expand 2D1.hip  FeE Curve Subtract Poly.hip  FeE Curve Subtract.hip  FeE Delete All Attribute Group.hip  FeE Delete Element.hip  FeE Delete Vertex.hip  FeE Direction Cross.hip  FeE Edge Group Transfer.hip  FeE Enumerate Combine.hip  FeE Enumerate Promote.hip  FeE Enumerate from Attrib.hip  FeE Enumerate.hip  FeE Extract Point.hip  FeE Extreme Element.hip  FeE Flat Edge.hip  FeE Fuse.hip  FeE Geo Layout.hip  FeE Group Attribute Boundary.hip  FeE Group Combine Unshared.hip  FeE Group Combine.hip  FeE Group Corner Edge.hip  FeE Group Curve Corner.hip  (+41 more)
cpp/include/: gfe.h  ufe.h
cpp/include/GFE/: ArrayOp.h  Attribute.h  AttributeArray.h  AttributeDelete.h  Bound.h  Core.h  EnumClass.h  GFE_Attribute.h  GFE_AttributeBlend.h  GFE_AttributeCast.h  GFE_AttributeCombine.h  GFE_AttributeCopy.h  GFE_AttributeDuplicate.h  GFE_AttributeExtremum.h  GFE_AttributeInterpolateRay.h  GFE_AttributeNormalize.h  GFE_AttributePromote.h  GFE_AttributeRemap.h  GFE_AttributeValueCount.h  GFE_AttributeValueReplace.h  GFE_BezierCurveInsertPoint.h  GFE_Carve.h  GFE_Clip.h  GFE_Connectivity.h  GFE_ConvertLine.h  GFE_Convex.h  GFE_CornerPoint.h  GFE_CullingByVolume2DTrace.h  GFE_CurveDirectionSoftBlend.h  GFE_CurveExpand2d.h  GFE_CurveExtendedLine.h  GFE_CurveFrame.C  GFE_CurveFrame.h  GFE_CurveSetExpand2d.h  GFE_CurveSubtractMesh.h  GFE_CurveUV.h  GFE_DelaunayTriangulate.h  GFE_DeleteAndUnpack.h  GFE_DeleteElement.h  GFE_DeleteVertex.h  (+112 more)
cpp/include/GFE/Deprecated/: GFE_Template.h  GFE_TopologyReference.h  GFE_VertexNextEquiv.h
cpp/include/UFE/: Core.h  Math.h  SplittableString.h  Type.h  TypeTraits.h
cpp/script/: cmakeAll.py  cmakeAllbyPython.bat  genCMakeLists.py  genCMakeListsbyPython.bat
cpp/scriptold/: buildAll.py  buildAllbyPython.bat  cmakeAll.bat  cmakeAll.py  cmake_and_build_all_by_python.bat  delAllBuild.py  delAllBuildbyPython.bat  shortcutSln.py  shortcutSlnbyPython.bat
cpp/src/DM/DM_InfoHook/: DM_InfoHook.C
cpp/src/DM/DM_LightBloomHook/: DM_LightBloomHook.C
cpp/src/SOP/: SOP_FeE_Adjacency_1_0.txt  SOP_FeE_AttribCopyFast_1_0.txt  SOP_FeE_AttribScale_1_0.txt  SOP_FeE_AttribSetToDefault_1_0.txt  SOP_FeE_Connectivity_1_0.txt  SOP_FeE_DelAllAttribGroup_1_0.txt  SOP_FeE_DelByGroup_1_0.txt  SOP_FeE_ExtractPoint_1_0.txt  SOP_FeE_GroupCombine_1_0.txt  SOP_FeE_GroupExpand_1_0.txt  SOP_FeE_GroupReverse_1_0.txt  SOP_FeE_GroupUnshared_1_0.txt  SOP_FeE_GroupVis_2_0.txt  SOP_FeE_JoinCurve_2_0.txt  SOP_FeE_LeaveElement_1_0.txt  SOP_FeE_Measure_3_0.txt  SOP_FeE_Normal2D_1_0.txt  SOP_FeE_PolyCut_3_0.txt  SOP_FeE_PrimInlinePoint_Fast_2_0.txt  SOP_FeE_Skin_1_0.txt  SOP_FeE_UVRectify_2_0.txt  SOP_FeE_UVScaletoWorldSize_0_5.txt  SOP_FeE_UVScaletoWorldSize_3_0.txt
cpp/src/SOP/SOP_FeE_AttribBlend_1_0/: SOP_FeE_AttribBlend_1_0.C  SOP_FeE_AttribBlend_1_0.h
cpp/src/SOP/SOP_FeE_AttribCast_1_0/: SOP_FeE_AttribCast_1_0.C  SOP_FeE_AttribCast_1_0.h
cpp/src/SOP/SOP_FeE_AttribCopyFast_1_0/: CMakeLists.txt  SOP_FeE_AttribCopyFast_1_0.C  SOP_FeE_AttribCopyFast_1_0.h
cpp/src/SOP/SOP_FeE_AttribCopy_4_0/: CMakeLists.txt  SOP_FeE_AttribCopy_4_0.C  SOP_FeE_AttribCopy_4_0.h
cpp/src/SOP/SOP_FeE_AttribDel_2_0/: CMakeLists.txt  SOP_FeE_AttribDel_2_0.C  SOP_FeE_AttribDel_2_0.h
cpp/src/SOP/SOP_FeE_AttribDuplicate_1_0/: SOP_FeE_AttribDuplicate_1_0.C  SOP_FeE_AttribDuplicate_1_0.h
cpp/src/SOP/SOP_FeE_AttribExtremum_2_0/: SOP_FeE_AttribExtremum_2_0.C  SOP_FeE_AttribExtremum_2_0.h
cpp/src/SOP/SOP_FeE_AttribInterpRay_2_0/: SOP_FeE_AttribInterpRay_2_0.C  SOP_FeE_AttribInterpRay_2_0.h
cpp/src/SOP/SOP_FeE_AttribNormalize_2_0/: SOP_FeE_AttribNormalize_2_0.C  SOP_FeE_AttribNormalize_2_0.h
cpp/src/SOP/SOP_FeE_AttribOut_1_0/: SOP_FeE_AttribOut_1_0.C  SOP_FeE_AttribOut_1_0.h
cpp/src/SOP/SOP_FeE_AttribPromote_1_0/: SOP_FeE_AttribPromote_1_0.C
cpp/src/SOP/SOP_FeE_AttribRemap_1_0/: SOP_FeE_AttribRemap_1_0.C  SOP_FeE_AttribRemap_1_0.h
cpp/src/SOP/SOP_FeE_AttribScale_1_0/: CMakeLists.txt  SOP_FeE_AttribScale_1_0.C  SOP_FeE_AttribScale_1_0.h
cpp/src/SOP/SOP_FeE_AttribSetToDefault_1_0/: CMakeLists.txt  SOP_FeE_AttribSetToDefault_1_0.C  SOP_FeE_AttribSetToDefault_1_0.h
cpp/src/SOP/SOP_FeE_AttribValReplace_1_0/: SOP_FeE_AttribValReplace_1_0.C  SOP_FeE_AttribValReplace_1_0.h
cpp/src/SOP/SOP_FeE_BezierCurveInsertPoint_1_0/: SOP_FeE_BezierCurveInsertPoint_1_0.C  SOP_FeE_BezierCurveInsertPoint_1_0.h
cpp/src/SOP/SOP_FeE_BlockStopCondition_2_0/: SOP_FeE_BlockStopCondition_2_0.C  SOP_FeE_BlockStopCondition_2_0.h
cpp/src/SOP/SOP_FeE_Carve_1_0/: SOP_FeE_Carve_1_0.C  SOP_FeE_Carve_1_0.h
cpp/src/SOP/SOP_FeE_Clip_1_0/: SOP_FeE_Clip_1_0.C  SOP_FeE_Clip_1_0.h
cpp/src/SOP/SOP_FeE_Connectivity_1_0/: CMakeLists.txt  SOP_FeE_Connectivity_1_0.C  SOP_FeE_Connectivity_1_0.h
cpp/src/SOP/SOP_FeE_ConvertLine_1_0/: SOP_FeE_ConvertLine_1_0.C  SOP_FeE_ConvertLine_1_0.h  SOP_FeE_ConvertLine_1_0.txt
cpp/src/SOP/SOP_FeE_ConvexPoly_1_0/: SOP_FeE_ConvexPoly_1_0.C  SOP_FeE_ConvexPoly_1_0.h
cpp/src/SOP/SOP_FeE_Cook_1_0/: SOP_FeE_Cook_1_0.C  SOP_FeE_Cook_1_0.h
(+2036 files in other folders)
